--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <i class="bx bx-link-alt"></i>
         <h1>Url Shortner</h1>
         <label for="originalUrl">Enter URL To Shorten :</label>
-        <input type="text" id="originalUrl" placeholder="https://example.com">
+        <input type="text" id="originalUrl" placeholder="https://rishbropromax.github.io/">
         <div class="buttons">
             <button id="reload-btn">Reload</button>
             <button id="short-btn">Short It</button>
